--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -155,6 +155,17 @@ font-family: "Figtree", sans-serif;
     width: auto;  
      margin-left: 20px;        
   }
+  #hero-img {
+width: 90%;
+height: auto;
+margin: 30px auto 0;   
+border: 4px solid yellow;
+border-radius: 100%;
+box-shadow: 0 0 15px 1px yellow;
+display: block;   
+max-width: 500px;     
+
+}
   
 }
 
